compiler/acton/test/syntaxerrors/err21.act
# Class definition without colon
class MyClass
    pass